test css on mobile gain.4 to really really make sure that v timestamp fixes the problem

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,12 @@
 /* Hide scrollbar */
 .custom-img-container::-webkit-scrollbar {
-    display: none; /* Works on PC not on mobile */
+    display: none; /* Works also on mobile */
 }
 
 /* fix 100px works best on mobile devices */
 .custom-img-container img {
     border: 10px solid, black;
-    width: 400px; 
+    width: 100px; 
     height: 100px;
     scroll-snap-align: center;  /* Snap alignment for scrolling.??? Don't know how this work??? */
     scroll-snap-type: x mandatory;  /* Smooth scrolling behavior.??? Don't know how this work??? */ 
